# notcl

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  setup.py
docs/: api_reference.rst  apps_examples.rst  background.rst  compatibility.rst  conf.py  index.rst  known_issues.rst  motivation.rst  tests.rst  under_the_hood.rst  usage.rst
notcl/: __init__.py  bridge_client.py  bridge_server.py  message.py  msg_classes.py  notcl.tcl  tclobj.py  tcltool.py  version.py
notcl/apps/: __init__.py  vivado.py  yosys.py
notcl/tcl/: notcl.tcl
notcl/tests/: abort_on_error.py  test_bridge.py  test_concurrency.py  test_custom_tclsh.py  test_subprocess.py  test_tclobj.py  test_tclsh.py
utils/test-notcl-tclsh/: .gitignore  Makefile  README.rst  box_type.c  box_type.h  cmd_infinite_loop.c  cmd_infinite_loop.h  cmd_invert_case.c  cmd_invert_case.h  cmd_multiply.c  cmd_multiply.h  cmds_box.c  cmds_box.h  cmds_signal.c  cmds_signal.h  main.c
